<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Fairphone OS</string>
    <string name="app_switcher_name">Your apps</string>
    <string name="app_switcher_dialog_name">YourAppsDialog</string>
    <string name="home">Home</string>
    <string name="uid_name">Android Core Apps</string>
    <string name="folder_name"></string>
    <string name="chooser_wallpaper">Choose wallpaper from</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="pick_wallpaper">Wallpapers</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="widgets_tab_label">Widgets</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="widget_dims_format" translatable="false">%1$d x %2$d</string>
    <string name="external_drop_widget_pick_format" translatable="false">%1$s (%2$d x %3$d)</string>
    <string name="external_drop_widget_error">Couldn\'t drop item on this Home screen.</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="group_wallpapers">Wallpapers</string>
    <string name="menu_edit_favorites">Edit favorites</string>
    <string name="menu_show_OOBE">Tutorial</string>
    <string name="menu_change_edge_swipe">Change menu</string>
    <string name="menu_home_settings">Home Settings</string>
    <string name="completely_out_of_space">No more room on your Home screens.</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room on the hotseat.</string>
    <string name="invalid_hotseat_item">This widget is too large for the hotseat.</string>
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>
    <string name="title_select_shortcut">Choose shortcut</string>
    <string name="title_select_application">Choose app</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_zone_label_workspace">Remove</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice Search</string>
    <string name="accessibility_all_apps_button">Apps</string>
    <string name="accessibility_delete_button">Remove</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="menu_add">Add</string>
    <string name="menu_manage_apps">Manage apps</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">System settings</string>
    <string name="menu_help">Help</string>
    <string name="help_url" translatable="false"></string>
    <string name="cab_menu_delete_app">Uninstall app</string>
    <string name="cab_menu_app_info">App details</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <string name="permdesc_uninstall_shortcut">Allows the app to remove
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="dream_name">Rocket Launcher</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="apps_customize_apps_scroll_format">Apps page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets page %1$d of %2$d</string>
    <string name="workspace_cling_title">Make yourself at home</string>
    <string name="workspace_cling_move_item">You can put your favorite apps here.</string>
    <string name="workspace_cling_open_all_apps">To see all your apps, touch the circle.</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_cling_add_item">To add an app to your Home screen, touch &amp; hold it.</string>
    <string name="folder_cling_title">Organize your apps with folders</string>
    <string name="folder_cling_move_item">To move an app, touch &amp; hold it.</string>
    <string name="folder_cling_create_folder">To make a new folder on your Home screen, stack one app on top of another.</string>
    <string name="cling_dismiss">OK</string>
    <string name="dummy_custom_cling_error_message">Error: custom workspace layout passed in but custom cling was not overwritten</string>
    <string name="folder_opened">Folder opened, <xliff:g id="width" example="5">%1$d</xliff:g> by <xliff:g id="height" example="3">%2$d</xliff:g></string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_renamed">Folder renamed to <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="folder_name_format">Folder: <xliff:g id="name" example="Games">%1$s</xliff:g></string>
    <string name="custom_workspace_cling_title_1"></string>
    <string name="custom_workspace_cling_description_1"></string>
    <string name="custom_workspace_cling_title_2"></string>
    <string name="custom_workspace_cling_description_2"></string>
    <string name="image_desc">Default image descrition</string>
    <string name="your_apps">Your Apps</string>
    <string name="last_used_apps">Last\nused\napps</string>
    <string name="last_used">Last used</string>
    <string name="most_used_apps">Most\nused\napps</string>
    <string name="most_used">Most used</string>
    <string name="no_apps_have_been_opened_yet">No apps opened yet? Just start using your phone and come back to this screen</string>
    <string name="last_used_oobe">You can see the last apps you have used</string>
    <string name="most_used_oobe">And your phone learns from you, it will remember your most used apps</string>
    <string name="reset">Reset</string>
    <string name="app_switcher_reset_message">Are you sure?</string>
    <string name="quick_access">Quick Access</string>
    <string name="edit">Edit</string>
    <string name="favourite_apps">Favourite apps</string>
    <string name="drag_here_to_add">Drag\nhere\nto add</string>
    <string name="drag_here_to_remove">Drag\nhere to\nremove</string>
    <string name="energy_mood">Energy Mood on lock screen</string>
    <string name="energy_mood_summary">Display battery level as background color on lock screen</string>
    <string name="menu_change_edge_swipe_change_to">Changed to</string>
	<string name="menu_change_edge_swipe_normal">normal menu</string>
	<string name="menu_change_edge_swipe_alternative">alternative menu</string>
	<string name="oobeVideoSkipButtonText">skip</string>
	<string name="pref_mood_changer_title">Mood Changer</string>
	<string name="pref_edge_swipe_title">Edge Swipe</string>
	<string name="pref_edge_swipe_safe_zone">Enable safe zone</string>
	<string name="pref_edge_swipe_safe_zone_summ">Enabling makes Edge Swipe menu not go out of top or bottom</string>
	<string name="pref_show_mood_changer_on_lockscreen_summary">Enable Mood Changer on lockscreen, this will display the battery level as a background colour on the lockscreen</string>
	<string name="pref_show_mood_changer_on_lockscreen">Mood Changer on lockscreen</string>
	<string name="pref_show_mood_changer_on_homescreen_summary">Enable Mood Changer on homescreen, this will display the battery level as a background colour on the homescreen</string>
	<string name="pref_show_mood_changer_on_homescreen">Mood Changer on homescreen</string>
	<string name="pref_is_mood_changer_solid_summary">Is Mood changer solid</string>
	<string name="pref_is_mood_changer_solid">Solid Mood</string>
	<string name="oobe_quick_access">Quick Access</string>
	<string name="oobe_select_language">Select\nLanguage</string>
	<string name="oobe_setup_wifi">Setup\nWi-Fi</string>
	<string name="oobe_intro_top">Welcome!\nYou hold in your hands a phone built in a way that puts social values first. But yes, it makes phone calls, too.</string>
	<string name="oobe_intro_bottom">Let\'s show you how to use it</string>
	<string name="oobe_edge_swipe_title">Swipe from left or right</string>
	<string name="oobe_edge_swipe_text">Without releasing your finger</string>
	<string name="oobe_open_app_title">Release your finger</string>
	<string name="oobe_open_app_text">On top of an app to open it</string>
	<string name="oobe_edit_drag_intro">Apps can be dragged and dropped making them easy to edit</string>
	<string name="oobe_edit_drag_add_title">Drag and drop</string>
	<string name="oobe_edit_drag_add_text">To right column to add to favorites</string>
	<string name="oobe_edit_drag_remove_title">Drag and drop</string>
	<string name="oobe_edit_drag_remove_text">To left column to remove from favorites</string>
	<string name="oobe_edit_drag_trade_title">Drag favorites</string>
	<string name="oobe_edit_drag_trade_text">To swap position</string>
	<string name="oobe_your_apps_intro">Your most used apps all in one place</string>
	<string name="oobe_your_apps_learning">Your phone learns from you and will remember your most used apps</string>
	<string name="oobe_your_apps_last_ones">You can also see the last ones you\'ve used</string>
	<string name="oobe_your_apps_start_using">Start using your phone, the apps will be waiting here for you</string>
	<string name="oobe_start">Start</string>
	<string name="oobe_back">Back</string>
	<string name="oobe_skip">Skip</string>
	<string name="oobe_next">Next</string>
	<string name="oobe_done">Done</string>
    <string name="google_apps_installer_name">Google Apps Installer</string>
</resources>